# umanity-solana

./: .dockerignore  .env.example  .env.production.example  .gitignore  Anchor.toml  Cargo.toml  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DOCKER_DEPLOYMENT.md  Dockerfile  HACKATHON_PITCH.md  HACKATHON_SUBMISSION.md  PROJECT_SUMMARY.md  PROJECT_TREE.txt  QUICKSTART.md  QUICK_DEPLOY.md  QUICK_START.md  README.md  READY_TO_USE.md  SUPABASE_SETUP.md  TESTING_GUIDE.md  WINNING_SUMMARY.md  docker-compose.yml  next.config.ts  package.json  supabase-schema.sql  tailwind.config.ts
app/: globals.css  layout.tsx  page.tsx
app/api/activity/: route.ts
app/api/donate/: route.ts
app/api/leaderboard/: route.ts
app/api/platform/stats/: route.ts
app/api/pools/: route.ts
app/api/pools/donate/: route.ts
app/api/register/: route.ts
app/api/register/check/: route.ts
app/api/tips/send/: route.ts
app/api/tips/users/: route.ts
components/activity/: ActivityFeed.tsx
components/donation/: DonationPools.tsx  OneTapDonation.tsx
components/leaderboard/: Leaderboard.tsx
components/tips/: TippingSystem.tsx
components/wallet/: WalletButton.tsx  WalletProvider.tsx
lib/: constants.ts  storage.ts  supabase.ts
nginx/: nginx.conf
nginx/conf.d/: default-http.conf  umanity.conf
programs/umanity-donations/: Cargo.toml
programs/umanity-donations/src/: lib.rs
programs/umanity-tips/: Cargo.toml
programs/umanity-tips/src/: lib.rs
scripts/: deploy.sh  setup.sh
